# project-lazy-boy

./: Dockerfile  README.md  compose.yml  logging.conf  main.py  monitor.Dockerfile  monitor.py  pyproject.toml  scraper.py
data/: career.py  config.yml
docker/: Dockerfile  career_scraper.Dockerfile  classifier.Dockerfile  monitor.Dockerfile  scraper.Dockerfile
src/: career_scraper.py  classifier.py  crawler.py  monitor.py  redis_dump.py  scraper.py
