[tool.poetry]
name = "project-lazy-boy"
version = "0.1.0"
description = ""
authors = ["ma2za <mazzapaolo2019@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
httpx = { extras = ["http2"], version = "^0.25.0" }
beautifulsoup4 = "^4.12.2"
redis = "^5.0.1"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.scraper.dependencies]
bitsandbytes = "^0.41.1"
accelerate = "^0.23.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
transformers = "4.30.0"
scipy = "^1.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
